# crossplane-contrib-provider-aws

./: .gitignore  BUILD.bazel  WORKSPACE  deps.bzl
apis/: BUILD.bazel
apis/acm/: BUILD.bazel
apis/acm/v1alpha1/: BUILD.bazel
apis/acm/v1beta1/: BUILD.bazel
apis/acmpca/: BUILD.bazel
apis/acmpca/v1alpha1/: BUILD.bazel
apis/acmpca/v1beta1/: BUILD.bazel
apis/apigateway/v1alpha1/: BUILD.bazel
apis/apigatewayv2/v1alpha1/: BUILD.bazel
apis/apigatewayv2/v1beta1/: BUILD.bazel
apis/athena/v1alpha1/: BUILD.bazel
apis/cache/: BUILD.bazel
apis/cache/v1alpha1/: BUILD.bazel
apis/cache/v1beta1/: BUILD.bazel
apis/cloudfront/v1alpha1/: BUILD.bazel
apis/cloudsearch/v1alpha1/: BUILD.bazel
apis/cloudwatchlogs/v1alpha1/: BUILD.bazel
apis/cognitoidentity/v1alpha1/: BUILD.bazel
apis/cognitoidentityprovider/manualv1alpha1/: BUILD.bazel
apis/cognitoidentityprovider/v1alpha1/: BUILD.bazel
apis/database/: BUILD.bazel
apis/database/v1beta1/: BUILD.bazel
apis/dax/v1alpha1/: BUILD.bazel
apis/docdb/v1alpha1/: BUILD.bazel
apis/dynamodb/v1alpha1/: BUILD.bazel
apis/ec2/: BUILD.bazel
apis/ec2/manualv1alpha1/: BUILD.bazel
apis/ec2/v1alpha1/: BUILD.bazel
apis/ec2/v1beta1/: BUILD.bazel
apis/ecr/: BUILD.bazel
apis/ecr/v1alpha1/: BUILD.bazel
apis/ecr/v1beta1/: BUILD.bazel
apis/ecs/v1alpha1/: BUILD.bazel
apis/efs/v1alpha1/: BUILD.bazel
apis/eks/: BUILD.bazel
apis/eks/manualv1alpha1/: BUILD.bazel
apis/eks/v1alpha1/: BUILD.bazel
apis/eks/v1beta1/: BUILD.bazel
apis/elasticache/v1alpha1/: BUILD.bazel
apis/elasticloadbalancing/v1alpha1/: BUILD.bazel
apis/elbv2/v1alpha1/: BUILD.bazel
apis/glue/v1alpha1/: BUILD.bazel
apis/iam/: BUILD.bazel
apis/iam/v1alpha1/: BUILD.bazel
apis/iam/v1beta1/: BUILD.bazel
apis/iot/v1alpha1/: BUILD.bazel
apis/kafka/v1alpha1/: BUILD.bazel
apis/kinesis/v1alpha1/: BUILD.bazel
apis/kms/v1alpha1/: BUILD.bazel
apis/lambda/manualv1alpha1/: BUILD.bazel
apis/lambda/v1alpha1/: BUILD.bazel
apis/lambda/v1beta1/: BUILD.bazel
apis/mq/v1alpha1/: BUILD.bazel
apis/mwaa/v1alpha1/: BUILD.bazel
apis/neptune/v1alpha1/: BUILD.bazel
apis/notification/: BUILD.bazel
apis/notification/v1alpha1/: BUILD.bazel
apis/prometheusservice/v1alpha1/: BUILD.bazel
apis/ram/v1alpha1/: BUILD.bazel
apis/rds/v1alpha1/: BUILD.bazel
apis/redshift/: BUILD.bazel
apis/redshift/v1alpha1/: BUILD.bazel
apis/route53/: BUILD.bazel
apis/route53/v1alpha1/: BUILD.bazel
apis/route53resolver/manualv1alpha1/: BUILD.bazel
apis/route53resolver/v1alpha1/: BUILD.bazel
apis/s3/: BUILD.bazel
apis/s3/v1alpha3/: BUILD.bazel
apis/s3/v1beta1/: BUILD.bazel
apis/secretsmanager/: BUILD.bazel
apis/secretsmanager/v1alpha1/: BUILD.bazel
apis/secretsmanager/v1beta1/: BUILD.bazel
apis/servicediscovery/v1alpha1/: BUILD.bazel
apis/sfn/v1alpha1/: BUILD.bazel
apis/sns/: BUILD.bazel
apis/sns/v1beta1/: BUILD.bazel
apis/sqs/v1beta1/: BUILD.bazel
apis/transfer/v1alpha1/: BUILD.bazel
apis/v1alpha1/: BUILD.bazel
apis/v1alpha3/: BUILD.bazel
apis/v1beta1/: BUILD.bazel
cmd/provider/: BUILD.bazel
package/: BUILD.bazel
package/crds/: BUILD.bazel
pkg/clients/: BUILD.bazel
pkg/clients/acm/: BUILD.bazel
pkg/clients/acm/fake/: BUILD.bazel
pkg/clients/acmpca/: BUILD.bazel
pkg/clients/acmpca/fake/: BUILD.bazel
pkg/clients/apigateway/: BUILD.bazel
pkg/clients/apigateway/fake/: BUILD.bazel
pkg/clients/cloudsearch/: BUILD.bazel
pkg/clients/cloudsearch/fake/: BUILD.bazel
pkg/clients/cognitoidentityprovider/: BUILD.bazel
pkg/clients/cognitoidentityprovider/fake/: BUILD.bazel
pkg/clients/dax/fake/: BUILD.bazel
pkg/clients/dbsubnetgroup/: BUILD.bazel
pkg/clients/dbsubnetgroup/fake/: BUILD.bazel
pkg/clients/docdb/fake/: BUILD.bazel
pkg/clients/ec2/: BUILD.bazel
pkg/clients/ec2/fake/: BUILD.bazel
pkg/clients/ecr/: BUILD.bazel
pkg/clients/ecr/fake/: BUILD.bazel
pkg/clients/eks/: BUILD.bazel
pkg/clients/eks/fake/: BUILD.bazel
pkg/clients/elasticache/: BUILD.bazel
pkg/clients/elasticache/fake/: BUILD.bazel
pkg/clients/elasticloadbalancing/elb/: BUILD.bazel
pkg/clients/hostedzone/: BUILD.bazel
pkg/clients/hostedzone/fake/: BUILD.bazel
pkg/clients/iam/: BUILD.bazel
pkg/clients/iam/fake/: BUILD.bazel
pkg/clients/mock/: BUILD.bazel
pkg/clients/mock/cognitoidentityprovider/: BUILD.bazel
pkg/clients/mock/kube/: BUILD.bazel
pkg/clients/mq/: BUILD.bazel
pkg/clients/notification/: BUILD.bazel
pkg/clients/notification/fake/: BUILD.bazel
pkg/clients/rds/: BUILD.bazel
pkg/clients/rds/fake/: BUILD.bazel
pkg/clients/redshift/: BUILD.bazel
pkg/clients/redshift/fake/: BUILD.bazel
pkg/clients/resolverruleassociation/: BUILD.bazel
pkg/clients/resourcerecordset/: BUILD.bazel
pkg/clients/resourcerecordset/fake/: BUILD.bazel
pkg/clients/s3/: BUILD.bazel
pkg/clients/s3/fake/: BUILD.bazel
pkg/clients/servicediscovery/: BUILD.bazel
pkg/clients/servicediscovery/fake/: BUILD.bazel
pkg/clients/sns/: BUILD.bazel
pkg/clients/sns/fake/: BUILD.bazel
pkg/clients/sqs/: BUILD.bazel
pkg/clients/sqs/fake/: BUILD.bazel
pkg/controller/: BUILD.bazel
pkg/controller/acm/: BUILD.bazel
pkg/controller/acmpca/certificateauthority/: BUILD.bazel
pkg/controller/acmpca/certificateauthoritypermission/: BUILD.bazel
pkg/controller/apigateway/apikey/: BUILD.bazel
pkg/controller/apigateway/authorizer/: BUILD.bazel
pkg/controller/apigateway/basepathmapping/: BUILD.bazel
pkg/controller/apigateway/deployment/: BUILD.bazel
pkg/controller/apigateway/documentationpart/: BUILD.bazel
pkg/controller/apigateway/documentationversion/: BUILD.bazel
pkg/controller/apigateway/domainname/: BUILD.bazel
pkg/controller/apigateway/gatewayresponse/: BUILD.bazel
pkg/controller/cache/: BUILD.bazel
pkg/controller/cloudfront/: BUILD.bazel
pkg/controller/config/: BUILD.bazel
pkg/controller/database/: BUILD.bazel
pkg/controller/docdb/: BUILD.bazel
pkg/controller/eks/: BUILD.bazel
pkg/controller/redshift/: BUILD.bazel
pkg/controller/s3/: BUILD.bazel
pkg/features/: BUILD.bazel
(+159 files in other folders)
