load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "apis",
    srcs = ["aws.go"],
    importpath = "github.com/crossplane-contrib/provider-aws/apis",
    visibility = ["//visibility:public"],
    deps = [
        "//apis/acm/v1alpha1",
        "//apis/acm/v1beta1",
        "//apis/acmpca/v1alpha1",
        "//apis/acmpca/v1beta1",
        "//apis/apigateway/v1alpha1",
        "//apis/apigatewayv2/v1alpha1",
        "//apis/apigatewayv2/v1beta1",
        "//apis/athena/v1alpha1",
        "//apis/cache/v1alpha1",
        "//apis/cache/v1beta1",
        "//apis/cloudfront/v1alpha1",
        "//apis/cloudsearch/v1alpha1",
        "//apis/cloudwatchlogs/v1alpha1",
        "//apis/cognitoidentity/v1alpha1",
        "//apis/cognitoidentityprovider/manualv1alpha1",
        "//apis/cognitoidentityprovider/v1alpha1",
        "//apis/database/v1beta1",
        "//apis/dax/v1alpha1",
        "//apis/docdb/v1alpha1",
        "//apis/dynamodb/v1alpha1",
        "//apis/ec2/manualv1alpha1",
        "//apis/ec2/v1alpha1",
        "//apis/ec2/v1beta1",
        "//apis/ecr/v1alpha1",
        "//apis/ecr/v1beta1",
        "//apis/ecs/v1alpha1",
        "//apis/efs/v1alpha1",
        "//apis/eks/manualv1alpha1",
        "//apis/eks/v1alpha1",
        "//apis/eks/v1beta1",
        "//apis/elasticache/v1alpha1",
        "//apis/elasticloadbalancing/v1alpha1",
        "//apis/elbv2/v1alpha1",
        "//apis/glue/v1alpha1",
        "//apis/iam/v1alpha1",
        "//apis/iam/v1beta1",
        "//apis/iot/v1alpha1",
        "//apis/kafka/v1alpha1",
        "//apis/kinesis/v1alpha1",
        "//apis/kms/v1alpha1",
        "//apis/lambda/manualv1alpha1",
        "//apis/lambda/v1alpha1",
        "//apis/lambda/v1beta1",
        "//apis/mq/v1alpha1",
        "//apis/mwaa/v1alpha1",
        "//apis/neptune/v1alpha1",
        "//apis/notification/v1alpha1",
        "//apis/prometheusservice/v1alpha1",
        "//apis/ram/v1alpha1",
        "//apis/rds/v1alpha1",
        "//apis/redshift/v1alpha1",
        "//apis/route53/v1alpha1",
        "//apis/route53resolver/manualv1alpha1",
        "//apis/route53resolver/v1alpha1",
        "//apis/s3/v1alpha3",
        "//apis/s3/v1beta1",
        "//apis/secretsmanager/v1alpha1",
        "//apis/secretsmanager/v1beta1",
        "//apis/servicediscovery/v1alpha1",
        "//apis/sfn/v1alpha1",
        "//apis/sns/v1beta1",
        "//apis/sqs/v1beta1",
        "//apis/transfer/v1alpha1",
        "//apis/v1alpha1",
        "//apis/v1alpha3",
        "//apis/v1beta1",
        "@io_k8s_apimachinery//pkg/runtime",
    ],
)
