filegroup(
    name = "crds",
    src = [
        "acm.aws.crossplane.io_certificates.yaml",
        "acmpca.aws.crossplane.io_certificateauthorities.yaml",
        "acmpca.aws.crossplane.io_certificateauthoritypermissions.yaml",
        "apigateway.aws.crossplane.io_apikeys.yaml",
        "apigateway.aws.crossplane.io_authorizers.yaml",
        "apigateway.aws.crossplane.io_basepathmappings.yaml",
        "apigateway.aws.crossplane.io_deployments.yaml",
        "apigateway.aws.crossplane.io_documentationparts.yaml",
        "apigateway.aws.crossplane.io_documentationversions.yaml",
        "apigateway.aws.crossplane.io_domainnames.yaml",
        "apigateway.aws.crossplane.io_gatewayresponses.yaml",
        "apigateway.aws.crossplane.io_integrationresponses.yaml",
        "apigateway.aws.crossplane.io_integrations.yaml",
        "apigateway.aws.crossplane.io_methodresponses.yaml",
        "apigateway.aws.crossplane.io_methods.yaml",
        "apigateway.aws.crossplane.io_models.yaml",
        "apigateway.aws.crossplane.io_requestvalidators.yaml",
        "apigateway.aws.crossplane.io_resources.yaml",
        "apigateway.aws.crossplane.io_restapis.yaml",
        "apigateway.aws.crossplane.io_stages.yaml",
        "apigateway.aws.crossplane.io_usageplankeys.yaml",
        "apigateway.aws.crossplane.io_usageplans.yaml",
        "apigateway.aws.crossplane.io_vpclinks.yaml",
        "apigatewayv2.aws.crossplane.io_apimappings.yaml",
        "apigatewayv2.aws.crossplane.io_apis.yaml",
        "apigatewayv2.aws.crossplane.io_authorizers.yaml",
        "apigatewayv2.aws.crossplane.io_deployments.yaml",
        "apigatewayv2.aws.crossplane.io_domainnames.yaml",
        "apigatewayv2.aws.crossplane.io_integrationresponses.yaml",
        "apigatewayv2.aws.crossplane.io_integrations.yaml",
        "apigatewayv2.aws.crossplane.io_models.yaml",
        "apigatewayv2.aws.crossplane.io_routeresponses.yaml",
        "apigatewayv2.aws.crossplane.io_routes.yaml",
        "apigatewayv2.aws.crossplane.io_stages.yaml",
        "apigatewayv2.aws.crossplane.io_vpclinks.yaml",
        "athena.aws.crossplane.io_workgroups.yaml",
        "aws.crossplane.io_providerconfigs.yaml",
        "aws.crossplane.io_providerconfigusages.yaml",
        "aws.crossplane.io_providers.yaml",
        "aws.crossplane.io_storeconfigs.yaml",
        "cache.aws.crossplane.io_cacheclusters.yaml",
        "cache.aws.crossplane.io_cachesubnetgroups.yaml",
        "cache.aws.crossplane.io_replicationgroups.yaml",
        "cloudfront.aws.crossplane.io_cachepolicies.yaml",
        "cloudfront.aws.crossplane.io_cloudfrontoriginaccessidentities.yaml",
        "cloudfront.aws.crossplane.io_distributions.yaml",
        "cloudfront.aws.crossplane.io_responseheaderspolicies.yaml",
        "cloudsearch.aws.crossplane.io_domains.yaml",
        "cloudwatchlogs.aws.crossplane.io_loggroups.yaml",
        "cognitoidentity.aws.crossplane.io_identitypools.yaml",
        "cognitoidentityprovider.aws.crossplane.io_groupusermemberships.yaml",
        "cognitoidentityprovider.aws.crossplane.io_groups.yaml",
        "cognitoidentityprovider.aws.crossplane.io_identityproviders.yaml",
        "cognitoidentityprovider.aws.crossplane.io_resourceservers.yaml",
        "cognitoidentityprovider.aws.crossplane.io_userpoolclients.yaml",
        "cognitoidentityprovider.aws.crossplane.io_userpooldomains.yaml",
        "cognitoidentityprovider.aws.crossplane.io_userpools.yaml",
        "database.aws.crossplane.io_dbsubnetgroups.yaml",
        "database.aws.crossplane.io_rdsinstances.yaml",
        "dax.aws.crossplane.io_clusters.yaml",
        "dax.aws.crossplane.io_parametergroups.yaml",
        "dax.aws.crossplane.io_subnetgroups.yaml",
        "docdb.aws.crossplane.io_dbclusterparametergroups.yaml",
        "docdb.aws.crossplane.io_dbclusters.yaml",
        "docdb.aws.crossplane.io_dbinstances.yaml",
        "docdb.aws.crossplane.io_dbsubnetgroups.yaml",
        "dynamodb.aws.crossplane.io_backups.yaml",
        "dynamodb.aws.crossplane.io_globaltables.yaml",
        "dynamodb.aws.crossplane.io_tables.yaml",
        "ec2.aws.crossplane.io_addresses.yaml",
        "ec2.aws.crossplane.io_flowlogs.yaml",
        "ec2.aws.crossplane.io_instances.yaml",
        "ec2.aws.crossplane.io_internetgateways.yaml",
        "ec2.aws.crossplane.io_launchtemplates.yaml",
        "ec2.aws.crossplane.io_launchtemplateversions.yaml",
        "ec2.aws.crossplane.io_natgateways.yaml",
        "ec2.aws.crossplane.io_routes.yaml",
        "ec2.aws.crossplane.io_routetables.yaml",
        "ec2.aws.crossplane.io_securitygrouprules.yaml",
        "ec2.aws.crossplane.io_securitygroups.yaml",
        "ec2.aws.crossplane.io_subnets.yaml",
        "ec2.aws.crossplane.io_transitgatewayroutes.yaml",
        "ec2.aws.crossplane.io_transitgatewayroutetables.yaml",
        "ec2.aws.crossplane.io_transitgateways.yaml",
        "ec2.aws.crossplane.io_transitgatewayvpcattachments.yaml",
        "ec2.aws.crossplane.io_volumes.yaml",
        "ec2.aws.crossplane.io_vpccidrblocks.yaml",
        "ec2.aws.crossplane.io_vpcendpoints.yaml",
        "ec2.aws.crossplane.io_vpcendpointserviceconfigurations.yaml",
        "ec2.aws.crossplane.io_vpcpeeringconnections.yaml",
        "ec2.aws.crossplane.io_vpcs.yaml",
        "ecr.aws.crossplane.io_lifecyclepolicies.yaml",
        "ecr.aws.crossplane.io_repositories.yaml",
        "ecr.aws.crossplane.io_repositorypolicies.yaml",
        "ecs.aws.crossplane.io_clusters.yaml",
        "ecs.aws.crossplane.io_services.yaml",
        "ecs.aws.crossplane.io_taskdefinitions.yaml",
        "efs.aws.crossplane.io_accesspoints.yaml",
        "efs.aws.crossplane.io_filesystems.yaml",
        "efs.aws.crossplane.io_mounttargets.yaml",
        "eks.aws.crossplane.io_addons.yaml",
        "eks.aws.crossplane.io_clusters.yaml",
        "eks.aws.crossplane.io_fargateprofiles.yaml",
        "eks.aws.crossplane.io_identityproviderconfigs.yaml",
        "eks.aws.crossplane.io_nodegroups.yaml",
        "elasticache.aws.crossplane.io_cacheparametergroups.yaml",
        "elasticloadbalancing.aws.crossplane.io_elbattachments.yaml",
        "elasticloadbalancing.aws.crossplane.io_elbs.yaml",
        "elbv2.aws.crossplane.io_listeners.yaml",
        "elbv2.aws.crossplane.io_loadbalancers.yaml",
        "elbv2.aws.crossplane.io_targetgroups.yaml",
        "glue.aws.crossplane.io_classifiers.yaml",
        "glue.aws.crossplane.io_connections.yaml",
        "glue.aws.crossplane.io_crawlers.yaml",
        "glue.aws.crossplane.io_databases.yaml",
        "glue.aws.crossplane.io_jobs.yaml",
        "glue.aws.crossplane.io_securityconfigurations.yaml",
        "iam.aws.crossplane.io_accesskeys.yaml",
        "iam.aws.crossplane.io_grouppolicyattachments.yaml",
        "iam.aws.crossplane.io_groups.yaml",
        "iam.aws.crossplane.io_groupusermemberships.yaml",
        "iam.aws.crossplane.io_instanceprofiles.yaml",
        "iam.aws.crossplane.io_openidconnectproviders.yaml",
        "iam.aws.crossplane.io_policies.yaml",
        "iam.aws.crossplane.io_rolepolicyattachments.yaml",
        "iam.aws.crossplane.io_roles.yaml",
        "iam.aws.crossplane.io_userpolicyattachments.yaml",
        "iam.aws.crossplane.io_users.yaml",
        "iot.aws.crossplane.io_policies.yaml",
        "iot.aws.crossplane.io_things.yaml",
        "kafka.aws.crossplane.io_clusters.yaml",
        "kafka.aws.crossplane.io_configurations.yaml",
        "kinesis.aws.crossplane.io_streams.yaml",
        "kms.aws.crossplane.io_aliases.yaml",
        "kms.aws.crossplane.io_keys.yaml",
        "lambda.aws.crossplane.io_functions.yaml",
        "lambda.aws.crossplane.io_permissions.yaml",
        "mq.aws.crossplane.io_brokers.yaml",
        "mq.aws.crossplane.io_users.yaml",
        "mwaa.aws.crossplane.io_environments.yaml",
        "neptune.aws.crossplane.io_dbclusters.yaml",
        "notification.aws.crossplane.io_snssubscriptions.yaml",
        "notification.aws.crossplane.io_snstopics.yaml",
        "prometheusservice.aws.crossplane.io_alertmanagerdefinitions.yaml",
        "prometheusservice.aws.crossplane.io_rulegroupsnamespaces.yaml",
        "prometheusservice.aws.crossplane.io_workspaces.yaml",
        "ram.aws.crossplane.io_resourceshares.yaml",
        "rds.aws.crossplane.io_dbclusterparametergroups.yaml",
        "rds.aws.crossplane.io_dbclusters.yaml",
        "rds.aws.crossplane.io_dbinstanceroleassociations.yaml",
        "rds.aws.crossplane.io_dbinstances.yaml",
        "rds.aws.crossplane.io_dbparametergroups.yaml",
        "rds.aws.crossplane.io_globalclusters.yaml",
        "redshift.aws.crossplane.io_clusters.yaml",
        "route53.aws.crossplane.io_hostedzones.yaml",
        "route53.aws.crossplane.io_resourcerecordsets.yaml",
        "route53resolver.aws.crossplane.io_resolverendpoints.yaml",
        "route53resolver.aws.crossplane.io_resolverruleassociations.yaml",
        "route53resolver.aws.crossplane.io_resolverrules.yaml",
        "s3.aws.crossplane.io_bucketpolicies.yaml",
        "s3.aws.crossplane.io_buckets.yaml",
        "secretsmanager.aws.crossplane.io_secrets.yaml",
        "servicediscovery.aws.crossplane.io_httpnamespaces.yaml",
        "servicediscovery.aws.crossplane.io_privatednsnamespaces.yaml",
        "servicediscovery.aws.crossplane.io_publicdnsnamespaces.yaml",
        "sfn.aws.crossplane.io_activities.yaml",
        "sfn.aws.crossplane.io_statemachines.yaml",
        "sns.aws.crossplane.io_subscriptions.yaml",
        "sns.aws.crossplane.io_topics.yaml",
        "sqs.aws.crossplane.io_queues.yaml",
        "transfer.aws.crossplane.io_servers.yaml",
        "transfer.aws.crossplane.io_users.yaml",
    ],
)
