load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "clients",
    srcs = ["aws.go"],
    importpath = "github.com/crossplane-contrib/provider-aws/pkg/clients",
    visibility = ["//visibility:public"],
    deps = [
        "//apis/v1alpha3",
        "//apis/v1beta1",
        "//pkg/version",
        "@com_github_aws_aws_sdk_go//aws",
        "@com_github_aws_aws_sdk_go//aws/awserr",
        "@com_github_aws_aws_sdk_go//aws/credentials",
        "@com_github_aws_aws_sdk_go//aws/endpoints",
        "@com_github_aws_aws_sdk_go//aws/request",
        "@com_github_aws_aws_sdk_go//aws/session",
        "@com_github_aws_aws_sdk_go_v2//aws",
        "@com_github_aws_aws_sdk_go_v2//aws/middleware",
        "@com_github_aws_aws_sdk_go_v2_config//:config",
        "@com_github_aws_aws_sdk_go_v2_credentials//:credentials",
        "@com_github_aws_aws_sdk_go_v2_credentials//stscreds",
        "@com_github_aws_aws_sdk_go_v2_service_ec2//types",
        "@com_github_aws_aws_sdk_go_v2_service_sts//:sts",
        "@com_github_aws_aws_sdk_go_v2_service_sts//types",
        "@com_github_aws_smithy_go//:smithy-go",
        "@com_github_aws_smithy_go//middleware",
        "@com_github_crossplane_crossplane_runtime//apis/common/v1:common",
        "@com_github_crossplane_crossplane_runtime//pkg/resource",
        "@com_github_evanphx_json_patch//:json-patch",
        "@com_github_go_ini_ini//:ini",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
        "@com_github_pkg_errors//:errors",
        "@io_k8s_api//core/v1:core",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/types",
        "@io_k8s_sigs_controller_runtime//pkg/client",
    ],
)

go_test(
    name = "clients_test",
    srcs = ["aws_test.go"],
    embed = [":clients"],
    deps = [
        "//apis/v1beta1",
        "@com_github_aws_aws_sdk_go_v2//aws",
        "@com_github_aws_aws_sdk_go_v2//aws/transport/http",
        "@com_github_aws_aws_sdk_go_v2_credentials//stscreds",
        "@com_github_aws_aws_sdk_go_v2_service_ec2//types",
        "@com_github_aws_aws_sdk_go_v2_service_sts//types",
        "@com_github_aws_smithy_go//:smithy-go",
        "@com_github_aws_smithy_go//document",
        "@com_github_aws_smithy_go//transport/http",
        "@com_github_crossplane_crossplane_runtime//apis/common/v1:common",
        "@com_github_crossplane_crossplane_runtime//pkg/resource/fake",
        "@com_github_crossplane_crossplane_runtime//pkg/test",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
        "@com_github_onsi_gomega//:gomega",
        "@com_github_pkg_errors//:errors",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_sigs_controller_runtime//pkg/client",
    ],
)
