load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "features",
    srcs = ["features.go"],
    importpath = "github.com/crossplane-contrib/provider-aws/pkg/features",
    visibility = ["//visibility:public"],
    deps = ["@com_github_crossplane_crossplane_runtime//pkg/feature"],
)
