load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "v1alpha1",
    srcs = [
        "custom_types.go",
        "zz_api_key.go",
        "zz_authorizer.go",
        "zz_base_path_mapping.go",
        "zz_deployment.go",
        "zz_doc.go",
        "zz_documentation_part.go",
        "zz_documentation_version.go",
        "zz_domain_name.go",
        "zz_enums.go",
        "zz_gateway_response.go",
        "zz_generated.deepcopy.go",
        "zz_generated.managed.go",
        "zz_generated.managedlist.go",
        "zz_generated.resolvers.go",
        "zz_groupversion_info.go",
        "zz_integration.go",
        "zz_integration_response.go",
        "zz_method.go",
        "zz_method_response.go",
        "zz_model.go",
        "zz_request_validator.go",
        "zz_resource.go",
        "zz_rest_api.go",
        "zz_stage.go",
        "zz_types.go",
        "zz_usage_plan.go",
        "zz_usage_plan_key.go",
        "zz_vpc_link.go",
    ],
    importpath = "github.com/crossplane-contrib/provider-aws/apis/apigateway/v1alpha1",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_crossplane_crossplane_runtime//apis/common/v1:common",
        "@com_github_crossplane_crossplane_runtime//pkg/reference",
        "@com_github_crossplane_crossplane_runtime//pkg/resource",
        "@com_github_pkg_errors//:errors",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_apimachinery//pkg/runtime/schema",
        "@io_k8s_sigs_controller_runtime//pkg/client",
        "@io_k8s_sigs_controller_runtime//pkg/scheme",
    ],
)
