load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "v1alpha1",
    srcs = [
        "cache_subnet_group_types.go",
        "cachecluster_types.go",
        "doc.go",
        "referencer.go",
        "register.go",
        "zz_generated.deepcopy.go",
        "zz_generated.managed.go",
        "zz_generated.managedlist.go",
    ],
    importpath = "github.com/crossplane-contrib/provider-aws/apis/cache/v1alpha1",
    visibility = ["//visibility:public"],
    deps = [
        "//apis/ec2/v1beta1",
        "//pkg/clients",
        "@com_github_crossplane_crossplane_runtime//apis/common/v1:common",
        "@com_github_crossplane_crossplane_runtime//pkg/reference",
        "@com_github_crossplane_crossplane_runtime//pkg/resource",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_apimachinery//pkg/runtime/schema",
        "@io_k8s_sigs_controller_runtime//pkg/client",
        "@io_k8s_sigs_controller_runtime//pkg/scheme",
    ],
)
