load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "v1alpha1",
    srcs = [
        "custom_types.go",
        "zz_cache_policy.go",
        "zz_cloud_front_origin_access_identity.go",
        "zz_distribution.go",
        "zz_doc.go",
        "zz_enums.go",
        "zz_generated.deepcopy.go",
        "zz_generated.managed.go",
        "zz_generated.managedlist.go",
        "zz_groupversion_info.go",
        "zz_response_headers_policy.go",
        "zz_types.go",
    ],
    importpath = "github.com/crossplane-contrib/provider-aws/apis/cloudfront/v1alpha1",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_crossplane_crossplane_runtime//apis/common/v1:common",
        "@com_github_crossplane_crossplane_runtime//pkg/resource",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_apimachinery//pkg/runtime/schema",
        "@io_k8s_sigs_controller_runtime//pkg/scheme",
    ],
)
