load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "manualv1alpha1",
    srcs = [
        "common.go",
        "instances_types.go",
        "register.go",
        "securitygrouprule_types.go",
        "vpccidrblock_types.go",
        "zz_generated.deepcopy.go",
        "zz_generated.managed.go",
        "zz_generated.managedlist.go",
        "zz_generated.resolvers.go",
    ],
    importpath = "github.com/crossplane-contrib/provider-aws/apis/ec2/manualv1alpha1",
    visibility = ["//visibility:public"],
    deps = [
        "//apis/ec2/v1beta1",
        "//apis/kms/v1alpha1",
        "//pkg/clients",
        "@com_github_aws_aws_sdk_go_v2//aws",
        "@com_github_aws_aws_sdk_go_v2_service_ec2//types",
        "@com_github_crossplane_crossplane_runtime//apis/common/v1:common",
        "@com_github_crossplane_crossplane_runtime//pkg/reference",
        "@com_github_crossplane_crossplane_runtime//pkg/resource",
        "@com_github_pkg_errors//:errors",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_apimachinery//pkg/runtime/schema",
        "@io_k8s_sigs_controller_runtime//pkg/client",
        "@io_k8s_sigs_controller_runtime//pkg/scheme",
    ],
)

go_test(
    name = "manualv1alpha1_test",
    srcs = ["common_test.go"],
    embed = [":manualv1alpha1"],
    deps = [
        "@com_github_aws_aws_sdk_go_v2//aws",
        "@com_github_aws_aws_sdk_go_v2_service_ec2//types",
        "@com_github_crossplane_crossplane_runtime//pkg/test",
        "@com_github_google_go_cmp//cmp",
    ],
)
