load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "v1alpha1",
    srcs = [
        "custom_types.go",
        "zz_doc.go",
        "zz_enums.go",
        "zz_flow_log.go",
        "zz_generated.deepcopy.go",
        "zz_generated.managed.go",
        "zz_generated.managedlist.go",
        "zz_generated.resolvers.go",
        "zz_groupversion_info.go",
        "zz_launch_template.go",
        "zz_launch_template_version.go",
        "zz_route.go",
        "zz_transit_gateway.go",
        "zz_transit_gateway_route.go",
        "zz_transit_gateway_route_table.go",
        "zz_transit_gateway_vpc_attachment.go",
        "zz_types.go",
        "zz_volume.go",
        "zz_vpc_endpoint.go",
        "zz_vpc_endpoint_service_configuration.go",
        "zz_vpc_peering_connection.go",
    ],
    importpath = "github.com/crossplane-contrib/provider-aws/apis/ec2/v1alpha1",
    visibility = ["//visibility:public"],
    deps = [
        "//apis/cloudwatchlogs/v1alpha1",
        "//apis/ec2/manualv1alpha1",
        "//apis/ec2/v1beta1",
        "//apis/elbv2/v1alpha1",
        "//apis/iam/v1beta1",
        "//apis/kms/v1alpha1",
        "//apis/s3/v1beta1",
        "@com_github_crossplane_crossplane_runtime//apis/common/v1:common",
        "@com_github_crossplane_crossplane_runtime//pkg/reference",
        "@com_github_crossplane_crossplane_runtime//pkg/resource",
        "@com_github_pkg_errors//:errors",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_apimachinery//pkg/runtime/schema",
        "@io_k8s_sigs_controller_runtime//pkg/client",
        "@io_k8s_sigs_controller_runtime//pkg/scheme",
    ],
)
