load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "v1beta1",
    srcs = [
        "accesskey_types.go",
        "doc.go",
        "group_types.go",
        "grouppolicyattachment_types.go",
        "groupusermembership_types.go",
        "openidconnectprovider_types.go",
        "policy_types.go",
        "referencers.go",
        "register.go",
        "role_types.go",
        "rolepolicyattachment_types.go",
        "user_types.go",
        "userpolicyattachment_types.go",
        "zz_generated.deepcopy.go",
        "zz_generated.managed.go",
        "zz_generated.managedlist.go",
        "zz_generated.resolvers.go",
    ],
    importpath = "github.com/crossplane-contrib/provider-aws/apis/iam/v1beta1",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_crossplane_crossplane_runtime//apis/common/v1:common",
        "@com_github_crossplane_crossplane_runtime//pkg/reference",
        "@com_github_crossplane_crossplane_runtime//pkg/resource",
        "@com_github_pkg_errors//:errors",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_apimachinery//pkg/runtime/schema",
        "@io_k8s_sigs_controller_runtime//pkg/client",
        "@io_k8s_sigs_controller_runtime//pkg/scheme",
    ],
)
