load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "v1alpha1",
    srcs = [
        "custom_types.go",
        "referencers.go",
        "zz_db_cluster.go",
        "zz_db_cluster_parameter_group.go",
        "zz_db_instance.go",
        "zz_db_instance_role_association.go",
        "zz_db_parameter_group.go",
        "zz_doc.go",
        "zz_enums.go",
        "zz_generated.deepcopy.go",
        "zz_generated.managed.go",
        "zz_generated.managedlist.go",
        "zz_generated.resolvers.go",
        "zz_global_cluster.go",
        "zz_groupversion_info.go",
        "zz_types.go",
    ],
    importpath = "github.com/crossplane-contrib/provider-aws/apis/rds/v1alpha1",
    visibility = ["//visibility:public"],
    deps = [
        "//apis/database/v1beta1",
        "//apis/ec2/v1beta1",
        "//apis/iam/v1beta1",
        "//apis/kms/v1alpha1",
        "@com_github_crossplane_crossplane_runtime//apis/common/v1:common",
        "@com_github_crossplane_crossplane_runtime//pkg/reference",
        "@com_github_crossplane_crossplane_runtime//pkg/resource",
        "@com_github_pkg_errors//:errors",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_apimachinery//pkg/runtime/schema",
        "@io_k8s_sigs_controller_runtime//pkg/client",
        "@io_k8s_sigs_controller_runtime//pkg/scheme",
    ],
)
